Fixing deprecations - URL now checked with URI - Handling exceptions caused by possible errors in URL. - bumping version number